Fix spacing

--- a/src/app/ArticleListPage.scss
+++ b/src/app/ArticleListPage.scss
@@ -29,4 +29,8 @@
             }
         }
     }
+
+    &__articles {
+        margin-top: 20px;
+    }
 }
